--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,24 @@ a {
 
 ul {
   list-style: none;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-top: 2rem;
 }
-
-ul li a {
+ul li {
+  width: 300px;
+}
+ul a {
   display: inline-block;
+  width: 100%;
+  height: 100%;
   padding: 15px;
-  background-color: blue;
+  background-color: #2c2cc3;
   border-radius: 10px;
-  margin: 15px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.05);
+}
+ul .number {
+  font-size: 5rem;
 }
