--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 25px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
   color: white;
   background-color: midnightblue;
@@ -23,13 +23,13 @@ a {
 ul {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
   margin-top: 2rem;
 }
 ul li {
-  width: 300px;
+  width: fit-content;
 }
 ul a {
   display: inline-block;
@@ -39,7 +39,12 @@ ul a {
   background-color: #2c2cc3;
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.05);
+  transition: all 0.2s;
+}
+ul a:hover {
+  transform: scale(1.1);
 }
 ul .number {
   font-size: 5rem;
+  font-weight: bold;
 }
