--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 25px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
   color: white;
 
@@ -24,13 +24,13 @@ a {
 ul {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
   margin-top: 2rem;
 
   li {
-    width: 300px;
+    width: fit-content;
   }
 
   a {
@@ -43,11 +43,18 @@ ul {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
       0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
       0 16px 16px rgba(0, 0, 0, 0.05);
+      transition: all .2s;
+  }
+
+  a:hover{
+    transform: scale(1.1);
   }
 
   .number {
     font-size: 5rem;
+    font-weight: bold;
   }
+
   .text {
   }
 }
