--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 25px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
   color: white;
   background-color: midnightblue;
@@ -29,8 +29,15 @@ ul {
   margin-top: 2rem;
 }
 ul li {
-  width: fit-content;
+  width: 300px;
 }
+
+@media screen and (max-width: 768px) {
+  ul li {
+    width: 100%;
+  }
+}
+
 ul a {
   display: inline-block;
   width: 100%;
@@ -38,7 +45,9 @@ ul a {
   padding: 15px;
   background-color: #2c2cc3;
   border-radius: 10px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
+    0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
+    0 16px 16px rgba(0, 0, 0, 0.05);
   transition: all 0.2s;
 }
 ul a:hover {
